# plumb

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PLUMB_API_REFERENCE.md  README.md  STATUS.md  main.py  pyproject.toml
.github/workflows/: test.yml
dev/active/v1-autocapture/: v1-autocapture-context.md  v1-autocapture-plan.md  v1-autocapture-tasks.md
dev/active/v1-cli/: v1-cli-context.md  v1-cli-plan.md  v1-cli-tasks.md
dev/active/v1-core-and-api/: v1-core-and-api-context.md  v1-core-and-api-plan.md  v1-core-and-api-tasks.md
dev/active/v1-http/: v1-http-context.md  v1-http-plan-part2.md  v1-http-plan.md  v1-http-tasks.md
dev/active/v1-judge-adapters/: v1-judge-adapters-code-review.md  v1-judge-adapters-tasks.md
docs/1_product/: PRD.md
docs/1_product_and_research/: PRD.md  measurement-framework-research.md  phase-2-prioritization.md  schema-and-metrics-v1.md
docs/2_architecture/: SYSTEM_DESIGN.md  TRD.md  deferred-features.md
docs/3_guides/: core_concepts.md  getting_started.md  orchestrator_handoff.md
plumb/: __init__.py  _cli_judge.py  _http_deps.py  _http_schemas.py  _http_stats.py  _output.py  _prompt_loader.py  _time_utils.py  api.py  cli.py  config.py  http.py
plumb/adapters/: __init__.py  _judge_common.py  _pragmas.py  _schema.py  agentsview_attach.py  blobstore_fs.py  judge_anthropic.py  judge_openai_compat.py  storage_sqlite.py
plumb/autocapture/: __init__.py  _anthropic.py  _emit.py  _openai.py  _payloads.py  _state.py
plumb/core/: entities.py  errors.py  ports.py  stats.py
src/: __init__.py
tests/: __init__.py  conftest.py
tests/adapters/: test_aggregations.py  test_list_runs_paged.py
tests/cli/: conftest.py  test_cli_example_promote.py  test_cli_judge_run.py  test_cli_misc.py  test_cli_run_stats.py  test_cli_score_write.py  test_output.py  test_time_utils.py
tests/helpers/: fake_judge.py
tests/http/: conftest.py
tests/integration/: _sigkill_helper.py  test_api_with_blobstore.py  test_api_with_sqlite.py  test_concurrent_adapters.py  test_sigkill_durability.py
tests/perf/: test_autocapture_overhead.py  test_cold_import.py  test_run_close_overhead.py  test_span_overhead.py
tests/unit/: test_config.py  test_prompt_loader.py
(+77 files in other folders)
