[project]
name = "plumb"
version = "0.1.0"
description = "A measurement spine for orchestrator + sub-agent systems: four-table SQLite schema with decorator + context-manager entry points."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plumb"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
files = ["plumb/core/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "perf: performance benchmarks",
]
testpaths = ["tests"]
